--- a/src/app/inicio/capa/capa.component.html
+++ b/src/app/inicio/capa/capa.component.html
@@ -16,8 +16,10 @@
             <div class="ccgion hiddenEl">
                 <a class="hiddenEl" href="javascript:;" style="text-decoration: none;display: flex;color: black;" (click)="selectAddress()">
                     <mat-icon class="hiddenEl" style="color: #da4444;font-size: 19px;">place</mat-icon>
-                    <span class="hiddenEl" *ngIf="!bagServ.getEnderecoEntrega().cidade.nome && !service.getDadosUsuario().id">Onde entregamos</span>
-                    <span class="hiddenEl" *ngIf="!bagServ.getEnderecoEntrega().cidade.nome && service.getDadosUsuario().id"> Escolha seu endereço </span>
+                    <span class="hiddenEl" *ngIf="!bagServ.getEnderecoEntrega().cidade.nome && !service.getDadosUsuario().id">Onde
+            entregamos</span>
+                    <span class="hiddenEl" *ngIf="!bagServ.getEnderecoEntrega().cidade.nome && service.getDadosUsuario().id">
+            Escolha seu endereço </span>
                     <span class="hiddenEl" *ngIf="bagServ.getEnderecoEntrega().cidade.nome">
             {{ bagServ.getEnderecoEntrega().bairro.nome }} - {{ bagServ.getEnderecoEntrega().cidade.nome }} </span>
                     <mat-icon class="mat-18 hiddenEl">expand_more</mat-icon>
@@ -36,8 +38,8 @@
       </button>
 
             <button mat-icon-button (click)="openBag()">
-        <mat-icon *ngIf="bagServ.getItensCarrinho().length > 0" [matBadgeColor]="'warn'" [matBadge]="bagServ.getItensCarrinho().length"
-          matBadgeOverlap="false">shopping_cart</mat-icon>
+        <mat-icon *ngIf="bagServ.getItensCarrinho().length > 0" [matBadgeColor]="'warn'"
+          [matBadge]="bagServ.getItensCarrinho().length" matBadgeOverlap="false">shopping_cart</mat-icon>
         <mat-icon *ngIf="bagServ.getItensCarrinho().length === 0">shopping_cart</mat-icon>
       </button>
 
@@ -47,14 +49,22 @@
         </div>
 
         <div class="c1b col-sm-3 hiddenEl">
-            <div class="hiddenEl">
-                <a *ngIf="!service.getDadosUsuario().id" mat-button color="primary" (click)="onClickBt1()">
-                    <mat-icon>login</mat-icon> Entrar
-                </a>
-                <a *ngIf="service.getDadosUsuario().id" mat-button color="primary" routerLink="/perfil-user">
-                    <mat-icon>login</mat-icon> {{ service.getDadosUsuario().nome }}
-                </a>
-            </div>
+            <span class="hiddenEl">
+        <div style="display: flex;">
+
+          <a *ngIf="service.sistemMultStores" mat-button color="primary" routerLink="/lojas">
+            <mat-icon>home</mat-icon> Início
+          </a>
+
+          <a *ngIf="!service.getDadosUsuario().id" mat-button color="primary" (click)="onClickBt1()">
+            <mat-icon>login</mat-icon> Entrar
+          </a>
+          <a *ngIf="service.getDadosUsuario().id" mat-button color="primary" routerLink="/perfil-user">
+            <mat-icon>login</mat-icon> {{ service.getDadosUsuario().nome }}
+          </a>
+        </div>
+      </span>
+
             <div class="hiddenEl">
                 <button mat-button color="primary" routerLink="/finish">
           <mat-icon>shopping_cart</mat-icon> Carrinho
