--- a/src/app/inicio/info/info.component.html
+++ b/src/app/inicio/info/info.component.html
@@ -1,11 +1,11 @@
-<div>
+<div class="sty">
     <div class="tt">
         <mat-icon class="ic">phone</mat-icon> Contato
     </div>
     <div> {{ dadosEmpresa.telefone }} </div>
 </div>
 
-<div>
+<div class="sty">
     <div class="tt">
         <mat-icon class="ic">av_timer</mat-icon> Estimativa de entrega
     </div>
@@ -17,9 +17,15 @@
 </div>
 
 <span *ngFor="let item of dadosEmpresa.hrfun">
-  <div style="display: flex;" *ngIf="item.abre && item.fecha" >
+  <div class="b" *ngIf="item.abre && item.fecha" >
+
     <div> {{ item.nome }} </div>
-    <div style="margin-left: 50px;"> {{ item.abre }} às {{ item.fecha }} </div>
+    <div style="margin-left: 50px;" class="a">
+      <span *ngIf="item.status === true" > {{ item.abre }} às {{ item.fecha }}  </span>
+<span *ngIf="item.status !== true" class="fch"> Fechado  </span>
+
+</div>
+
 </div>
 </span>
 
@@ -29,22 +35,32 @@
     <mat-icon class="ic">credit_card</mat-icon> Formas de pagamento
 </div>
 
-<div class="col-sm-12">
-    <div class="row" style="gap: 5px">
-        <div class="col-sm-3 text-center" style="background-color: rgb(226, 226, 226); border-radius: 10px; padding: 5px;" *ngFor="let item of dadosEmpresa.formaspagamento"> {{ item.nome }}
+<div class="col-sm-12" style="    padding-left: 0px;">
+    <div class="afps" style="gap: 5px">
+        <div class="" *ngFor="let item of dadosEmpresa.formaspagamento">
+            {{ item.nome }}
+            <div>
+                <span *ngFor="let itemIn of item.itens">
+                <div class="itemIn" *ngIf="itemIn.disponivel === true">
+                    <img style="margin-right: 10px;" [src]="itemIn.imagem" width="40" srcset="">
+                    {{ itemIn.nome }}
+                </div>
+              </span>
+
+            </div>
         </div>
     </div>
 </div>
 
-<div>
+<div class="sty">
     <div class="tt">
         <mat-icon class="ic">fact_check</mat-icon> Tipo de serviço
     </div>
-    <div> {{ dadosEmpresa.formasfuncionamento.nome }} </div>
+    <div class="sty"> {{ dadosEmpresa.formasfuncionamento.nome }} </div>
 </div>
 
 
-<div>
+<div class="sty">
     <div class="tt">
         <mat-icon class="ic">info</mat-icon> Outras informações
     </div>
